--- a/css/style.css
+++ b/css/style.css
@@ -19,11 +19,15 @@ h6 {
 }
 h1 {
   font-size: 96px;
+  line-height: 1.5;
+}
+h2 {
+    font-size: 64px;
 }
 
-p {
-  
+p {font-size: 16px;
   font-weight: normal;
+  line-height: 30px;
 }
 .hero {
   background-color: var(--secondary-color);
@@ -49,4 +53,31 @@ p {
   font-size: 18px;
   line-height: 27px;
   padding: 15px 30px;
+}
+.btn-secundary-button {
+    color: var(--brading-color);
+    border: 1px solid var(--brading-color);
+      border-radius: 4px;
+     font-size: 18px;
+  line-height: 27px;
+  padding: 15px 30px;
+}
+.project-description {
+    padding: 120px 60px;
+}
+@media (max-width: 900px) {
+    h1 {
+        font-size: 44px;
+        line-height: 1.5;
+    }
+    h2 {
+        font-size: 44px;
+    }
+    .hero {
+   padding: 80px 20px;
+}
+    .project-description {
+        padding: 0;
+        text-align: center;
+    }
 }
