--- a/css/style.css
+++ b/css/style.css
@@ -46,20 +46,20 @@ p {font-size: 16px;
   line-height: 2;
   font-size: 24px;
 }
-.about-section {
+.content-container {
    padding: 160px 20px;
 
 }
-.about-section h1 {
+.content-container h1 {
   font-size: 64px;
   line-height: 80px;
 
 }
-.about-section h2 {
+.content-container h2 {
   font-size: 18px;
   font-family: var(--default-font-family);
 }
-.about-section-content {
+.content {
   margin: 30px;
 
 }
@@ -93,7 +93,7 @@ p {font-size: 16px;
     .hero {
    padding: 80px 20px;
 }
-.about-section {
+.content-container {
   text-align: center;
   padding: 0;
 }
