--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,9 @@ h1 {
 h2 {
     font-size: 64px;
 }
+h4 {
+  font-size: 48px;
+}
 
 p {font-size: 16px;
   font-weight: normal;
@@ -120,6 +123,39 @@ nav a:hover,nav li.active a {
   color: var(--brading-color);
  
 }
+footer {
+   margin: 60px 0;
+  }
+footer .contact-box {
+background-color: var(--secondary-color);
+padding: 30px 120px;
+border-radius: 10px;
+}
+footer .contact-box p {
+  margin: 0;
+}
+footer .email-link {
+  text-decoration: none;
+  color: black;
+  font-size: 24px;
+  text-align: center;
+}
+footer .email-link:hover {
+  color: var(--brading-color);
+}
+footer .social-links a {
+  margin: 0 20px;
+  color: var(--brading-color);
+  background: var(--secondary-color);
+  border-radius: 50%;
+  padding: 10px 14px;
+  font-size: 18px;
+  transition: all 100ms ease-in-out;
+}
+footer .social-links a:hover {
+  color: white;
+  background: var(--brading-color);
+}
 
 @media (max-width: 900px) {
     h1 {
@@ -129,7 +165,12 @@ nav a:hover,nav li.active a {
     h2 {
         font-size: 44px;
     }
-    .hero {
+
+    h4 {
+      font-size: 26px;
+    }
+    
+   .hero {
    padding: 80px 20px;
 }
 .content {
@@ -140,4 +181,5 @@ nav a:hover,nav li.active a {
         padding: 0;
         text-align: center;
     }
+
 }
